--- a/index.html
+++ b/index.html
@@ -65,13 +65,37 @@
       </section>
 
       <section>
+        <h2>Our Team</h2>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <img src="/images/Mark.png" alt="Mark" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="/images/Tom.png" alt="Tom" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="/images/Camila.png" alt="Camila" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="/images/Daniel.png" alt="Daniel" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
+      <footer>
+        <a href="#">Web Studio</a>
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
     </main>
   </body>
 </html>
