--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <main>
-      <header>
-        <a href="#">Web Studio</a>
+      <header>        
         <nav>
+          <a href="./index.html"> Web Studio </a>
           <ul>
             <li>
               <a href="#">Studio</a>
@@ -23,15 +23,22 @@
           </ul>
         </nav>
         <address>
+          <ul>
+            <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
           <a href="tel:+110001111111"> +11 (000) 111-11-11 </a>
+            </li>
+          </ul>
         </address>
       </header>
-
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button>Order Service</button>
-
+      </section>
+      <section>
+        <h2>098</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -68,29 +75,29 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="/images/Mark.png" alt="Mark" />
+            <img src="./images/Mark.jpg" width="264" alt="Mark" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/Tom.png" alt="Tom" />
+            <img src="./images/Tom.jpg " width="264" alt="Tom" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/Camila.png" alt="Camila" />
+            <img src="./images/Camila.jpg" width="264" alt="Camila" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/images/Daniel.png" alt="Daniel" />
+            <img src="./images/Daniel.jpg" width="264" alt="Daniel" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
       <footer>
-        <a href="#">Web Studio</a>
+        <a href="./index.html"> Web Studio </a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
