--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main>
       <header>        
         <nav>
-          <a href="./index.html"> Web Studio </a>
+          <a href="./index.html">WebStudio</a>
           <ul>
             <li>
               <a href="#">Studio</a>
@@ -33,10 +33,12 @@
           </ul>
         </address>
       </header>
+
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
+
       <section>
         <h2>098</h2>
         <ul>
@@ -72,7 +74,7 @@
       </section>
 
       <section>
-        <h2>Our Team</h2>
+        <h2> Our Team </h2>
         <ul>
           <li>
             <img src="./images/Mark.jpg" width="264" alt="Mark" />
@@ -97,7 +99,7 @@
         </ul>
       </section>
       <footer>
-        <a href="./index.html"> Web Studio </a>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
